# EECE466_NXP

./: .gitignore  README.md
AIM_2024_launcher/: BACKUP.json  Raceway_1_template.sdf  launch_sim.py  models_config.json
scripts/: plot_mrac_states.py
src/b3rb/b3rb_description/urdf/: b3rb.urdf
src/b3rb_desktop/: README.md
src/b3rb_desktop/b3rb_desktop/: CMakeLists.txt
src/b3rb_desktop/b3rb_rviz/: CMakeLists.txt
src/b3rb_desktop/b3rb_rviz/launch/: view_robot.launch.py
src/b3rb_ros_line_follower/: setup.py
src/b3rb_ros_line_follower/b3rb_ros_line_follower/: b3rb_ros_edge_vectors.py  b3rb_ros_line_follower.py  b3rb_ros_mrac.py  b3rb_ros_mrac.py.bak_inner_blend_005  mrac_config.py  mrac_config.py.bak_enable_inner_apply_002  mrac_config.py.bak_inner_apply_005  mrac_config.py.bak_inner_blend_005  mrac_types.py  mrac_utils.py
src/b3rb_ros_line_follower/b3rb_ros_line_follower/controllers/: baseline_lane_controller.py
src/b3rb_ros_line_follower/b3rb_ros_line_follower/debug/: debug_snapshot.py
src/b3rb_ros_line_follower/b3rb_ros_line_follower/estimation/: vehicle_state_estimator.py
src/b3rb_ros_line_follower/b3rb_ros_line_follower/models/: actuator_models.py  battery_gain_estimator.py  cornering_stiffness_regression_matrix.py  cornering_stiffness_regression_outputs.py  cornering_stiffness_rls_estimator.py  cornering_stiffness_used_estimate.py  dynamic_bicycle.py  inner_lateral_yaw_reduced.py  inner_lateral_yaw_reference.py  inner_reference_command.py  (+8 more)
src/cerebri_bringup/: CMakeLists.txt  README.md
src/cerebri_bringup/launch/: cerebri.launch.py
src/dream_world/worlds/: Grand_Finale_Track.sdf  NXP_AIM_S3_Qualifiers_Track.sdf  Raceway_1.sdf  Raceway_1_backup.sdf  Raceway_1_difficult.sdf  Raceway_1_simple.sdf  Raceway_2.sdf  nxp_raceway_octagon.sdf  test_track_v12.sdf
src/nxp_cup_hw/: package.xml  setup.cfg  setup.py
src/nxp_cup_hw/launch/: hardware.launch.py
src/nxp_cup_vision/: setup.py
src/synapse_msgs/: CMakeLists.txt  README.md
src/synapse_msgs/msg/: TrafficStatus.msg
src/synapse_protobuf/proto/: CMakeLists.txt  pixy_vector.proto
src/synapse_ros/: CMakeLists.txt  README.md
src/synapse_ros/launch/: synapse_ros.launch.py
src/synapse_ros/src/: synapse_ros.cpp  synapse_ros.hpp
src/synapse_ros/src/proto/: udp_link.cpp  udp_link.hpp
src/synapse_tinyframe/: CMakeLists.txt  README.md
src/synapse_tinyframe/include/synapse_tinyframe/: SynapseTopics.h  TF_Config.h  TinyFrame.h  utils.h
src/synapse_tinyframe/src/: TinyFrame.c  utils.c
src/synapse_tinyframe/zephyr/: CMakeLists.txt  Kconfig  module.yml
tools/: validate_task6_prereq_log.py
(+42 files in other folders)
